<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="70dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/logo_da_calculadora"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/campoPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:backgroundTint="@color/cinza_claro"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/campoAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:backgroundTint="@color/cinza_claro"
            android:hint="@string/altura_m"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/verde_claro"
            android:text="@string/btn_calcular"
            app:cornerRadius="8dp"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/cinza_escuro"
            android:text="@string/btn_limpar"
            app:cornerRadius="8dp"
            android:textColor="@color/branco" />

        <Button
            android:id="@+id/btnFechar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde_escuro"
            android:text="@string/btn_fechar"
            app:cornerRadius="8dp"
            android:textColor="@color/branco" />

    </LinearLayout>
</ScrollView>